Fix masonry block widths, make content-sidebar-wrap padding equal the gutter width & remove right padding.

--- a/sass/_structure.scss
+++ b/sass/_structure.scss
@@ -179,6 +179,12 @@ body {
     background-position: -100px 25px;
 }
 
+body.page-template-page_section_grid .content-sidebar-wrap {
+    padding: $masonry-gutter-width;
+    padding-right: 0;
+}
+
+
 body.content-sidebar-wrap-disable-padding .content-sidebar-wrap {
     padding: 0;
 }
@@ -261,13 +267,12 @@ body.content-sidebar-wrap-disable-padding .content-sidebar-wrap {
 
 
 // MASONRY STYLES
-
 .masonry-block-sizer, .masonry-block {
-    width: 22%;
+    width: $masonry-block-width-default;
 }
 
 .masonry-gutter-sizer { 
-    width: 3%;
+    width: $masonry-gutter-width;
 }
 
 .masonry-block {
@@ -289,11 +294,11 @@ body.content-sidebar-wrap-disable-padding .content-sidebar-wrap {
 }
 
 .masonry-block-size--two-thirds {
-    width: 57.6666666667%;
+    width: 63.6666666667%;
 }
 
 .masonry-block-size--three-fourths {
-    width: 66%;
+    width: 72%;
 }
 
 .masony-block-size--one-whole {
