--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -50,6 +50,10 @@ $site-header-width: 330px;
 $site-header-width-med: $site-header-width - 100;
 
 
+// Masonry Grid
+$masonry-block-width-default: 22%;
+$masonry-gutter-width:        3%;
+
 
 //=================//
 //  FONT FAMILIES  //
